feat/i32: Melhorias e correções nos testes unitários do médoto findShelterByUserResponsibleEmail